# cookiecutter-pytorch-slp

./: README.md  cookiecutter.json  main.py  pyproject.toml
{{cookiecutter.project_name}}/: README.md  dataset.py
{{cookiecutter.project_name}}/config/: config.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: model.py  modules.py
