[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [" {{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.project_license}}"

[tool.poetry.dependencies]
python = "^3.8"
slp = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
